authN-authZ/auth-istio/oauth2_install.yaml

# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: oauth2-proxy
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
          command: ["redis-server"]
          args: ["--save", "", "--appendonly", "no"]
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: oauth2-proxy
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "oauth2-proxy"
  template:
    metadata:
      labels:
        app: oauth2-proxy
        sidecar.istio.io/inject: "true"
    spec:
      volumes:
        - name: oauth2-proxy-config
          configMap:
            name: oauth2-proxy-config
      containers:
      - name: oauth2-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:latest"
        ports:
        - containerPort: 4180
        volumeMounts:
        - name: oauth2-proxy-config
          mountPath: /etc/oauth2-proxy.cfg
          subPath: oauth2-proxy.cfg
        args:
          - --config=/etc/oauth2-proxy.cfg
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - name: http-oauthproxy
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
