authN-authZ/auth-istio/chatQnA_authZ_oauth.yaml
# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: chatqna-ext-authz
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        notPaths:
        - /realms/*
  selector:
    matchLabels:
      istio: ingressgateway
